@@ -1,4 +1,4 @@
-/* $Id: automap.c,v 1.7 2003-02-27 22:07:21 btb Exp $ */
+/* $Id: automap.c,v 1.8 2003-03-01 01:51:15 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -841,7 +841,7 @@ void create_name_canv()
 	else
 		sprintf(name_level_left, "Secret Level %i",-Current_level_num);
 
-	if (Current_mission_num == 0 && Current_level_num>0)		//built-in mission
+	if (Current_mission_num == Builtin_mission_num && Current_level_num>0)		//built-in mission
 		sprintf(name_level_right,"%s %d: ",system_name[(Current_level_num-1)/4],((Current_level_num-1)%4)+1);
 	else
 		strcpy(name_level_right, " ");
